# little-lint

./: .coverage  CONTRIBUTING.md  exp.py  little-lint.py  main.py  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
src/: constants.py  core.py  models.py  rules.py  types.py
src/rules/: __init__.py  ast_rules.py  file_rules.py  line_rules.py  rules_container.py
src/utils/: ast_utils.py
tests/: test_end_to_end.py  test_rule_container.py
tests/rules_test/: test_code_layout.py  test_comments.py  test_imports.py  test_lines.py  test_white_spaces.py
