[project]
name = "little-lint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astunparse>=1.6.3",
    "colorama>=0.4.6",
    "pytest>=8.3.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]
